--- a/index.html
+++ b/index.html
@@ -1,52 +1,78 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PNG to PDF Converter</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <meta name="description" content="Convert your PNG images to PDF instantly. Combine multiple images into a single PDF file.">
-  </head>
-  <body>
-    <div id="app">
-      <div class="glass-container">
-        <header>
-          <h1>PNG to PDF <span class="accent">Converter</span></h1>
-          <p class="subtitle">Transform your images into professional documents.</p>
-        </header>
 
-        <main>
-          <div class="upload-area" id="drop-zone">
-            <input type="file" id="file-input" accept="image/png" multiple hidden>
-            <div class="icon-container">
-              <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="upload-icon"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="17 8 12 3 7 8"></polyline><line x1="12" y1="3" x2="12" y2="15"></line></svg>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Image to PDF Converter</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <meta name="description"
+    content="Convert your images to PDF instantly. Combine multiple images into a single PDF file.">
+</head>
+
+<body>
+  <div id="app">
+    <div class="glass-container">
+      <header>
+        <h1>Image to PDF <span class="accent">Converter</span></h1>
+        <p class="subtitle">Transform your images into professional documents.</p>
+      </header>
+
+      <main>
+        <div class="upload-area" id="drop-zone">
+          <input type="file" id="file-input" accept="image/png, image/jpeg, image/jpg, image/webp" multiple hidden>
+          <div class="icon-container">
+            <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
+              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="upload-icon">
+              <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+              <polyline points="17 8 12 3 7 8"></polyline>
+              <line x1="12" y1="3" x2="12" y2="15"></line>
+            </svg>
+          </div>
+          <p class="upload-text">Drag & Drop images here (PNG, JPG, WEBP)</p>
+          <button class="btn-secondary" id="browse-btn">Browse Files</button>
+        </div>
+
+        <div class="controls" id="controls" style="display: none;">
+          <div class="file-list-header">
+            <h3>Selected Files <span id="file-count">(0)</span></h3>
+            <button class="btn-text" id="clear-all">Clear All</button>
+          </div>
+          <ul class="file-list" id="file-list">
+            <!-- File items will be injected here -->
+          </ul>
+
+          <div class="settings-area">
+            <div class="setting-item">
+              <input type="checkbox" id="compress-checkbox" checked>
+              <label for="compress-checkbox">Compress Images</label>
             </div>
-            <p class="upload-text">Drag & Drop PNG files here</p>
-            <button class="btn-secondary" id="browse-btn">Browse Files</button>
+            <div class="setting-item" id="quality-control">
+              <label for="quality-slider">Quality: <span id="quality-value">0.8</span></label>
+              <input type="range" id="quality-slider" min="0.1" max="1.0" step="0.1" value="0.8">
+            </div>
           </div>
 
-          <div class="controls" id="controls" style="display: none;">
-            <div class="file-list-header">
-              <h3>Selected Files <span id="file-count">(0)</span></h3>
-              <button class="btn-text" id="clear-all">Clear All</button>
-            </div>
-            <ul class="file-list" id="file-list">
-              <!-- File items will be injected here -->
-            </ul>
-            
-            <div class="actions">
-              <button class="btn-primary" id="convert-btn">
-                <span>Convert to PDF</span>
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="12" y1="18" x2="12" y2="12"></line><line x1="9" y1="15" x2="15" y2="15"></line></svg>
-              </button>
-            </div>
+          <div class="actions">
+            <button class="btn-primary" id="convert-btn">
+              <span>Convert to PDF</span>
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+                <polyline points="14 2 14 8 20 8"></polyline>
+                <line x1="12" y1="18" x2="12" y2="12"></line>
+                <line x1="9" y1="15" x2="15" y2="15"></line>
+              </svg>
+            </button>
           </div>
-        </main>
-      </div>
+        </div>
+      </main>
     </div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+  </div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
