--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
               <label for="quality-slider">Quality: <span id="quality-value">0.8</span></label>
               <input type="range" id="quality-slider" min="0.1" max="1.0" step="0.1" value="0.8">
             </div>
+            <div class="setting-item">
+              <label for="page-size-select">Page Size:</label>
+              <select id="page-size-select">
+                <option value="fit">Fit to Image</option>
+                <option value="a4">A4</option>
+                <option value="letter">Letter</option>
+              </select>
+            </div>
           </div>
 
           <div class="actions">
